--- a/styles.css
+++ b/styles.css
@@ -19,3 +19,35 @@ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
 LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 SOFTWARE.*/
+
+* {
+    box-sizing: border-box;
+  }
+  
+  .generator {
+    border: 2px solid yellow;
+    background-color: darkgray;
+    text-align: center;
+    width: 300px;
+    padding: 15px;
+    font-size: 1.3em;
+    cursor: pointer;
+    user-select: none;
+  }
+  
+  .generator.locked {
+    background-color: rgb(212, 90, 90)
+  }
+  
+  .generators-container {
+    display: flex;
+    width: 600px;
+    flex-wrap: wrap;
+    margin: auto;
+  }
+  
+  #currency {
+    margin: 40px;
+    font-size: 3em;
+    text-align: center;
+  }
